# pro-trader

backend/: .env  FIXES_AND_IMPROVEMENTS.md  README.md  dump.rdb  pyproject.toml  run.py  test.ipynb
backend/app/: config.py  dependencies.py  main.py
backend/app/api/: auth.py  portfolio.py  positions.py  router.py  trades.py
backend/app/auth/jwt/: auth_backend.py  auth_user.py  strategy.py  transport.py  user_manager.py
backend/app/core/: __init__.py  config.py  exceptions.py  security.py  session_manager.py
backend/app/db/: __init__.py  base_db.py  database.py  postgres.py  redis.py
backend/app/models/: __init__.py  base.py  positions.py  trade.py  user.py  user_model.py
backend/app/repositories/: __init__.py  base.py  position_repository.py  trade_repository.py  user_repository.py
backend/app/schema/: user_schema.py
backend/app/schemas/: __init__.py  auth.py  position.py  trade.py  user.py  websocket.py
backend/app/services/: auth_service.py  pnl_service.py  position_service.py  price_service.py
backend/app/websocket/: handlers.py  manager.py
backend/app/workers/: binance_consumer.py
frontend/: package-lock.json  package.json  pnpm-lock.yaml
frontend/src/: App.css  App.js
frontend/src/api/: axios.js  endpoint.js
frontend/src/components/: Dashboard.jsx  Login.jsx  Signup.jsx
frontend/src/config/: index.js
frontend/src/context/: AuthContext.js  WebSocketContext.js
frontend/src/hooks/: useAuthQueries.js  usePortfolio.js  usePositions.js  usePrices.js  (+1 more)
streamlit-frontend/: main.py  pyproject.toml
streamlit-frontend/app/: config.py
(+36 files in other folders)
